# ComfyUI_Timu_FunASR

./: LICENSE  README.md  __init__.py  format.py  funasr.py  hotwords.txt  pyproject.toml  requirements.txt  srttools.py
example_workflow/: FunASR_音频输入_基本工作流.json
